# system-monitor

./: .env.example  .gitignore  .replit  ARCHITECTURE.md  C2Server.desktop  CHECK_LOGS.txt  CNAME  DEPLOYMENT_CHECKLIST.md  DIAGNOSTIC_REPORT.md  DOMINATION_README.md  Dockerfile  FINAL_DEPLOY.txt  FINAL_STATUS.md  GITHUB_TOKEN_GUIDE.md  GLOBAL_AGENTS.md  IMPROVEMENTS.md  KAGGLE_CONNECT.md  MANIFEST.in  MINER_DEPLOYED.md  MODULES_REPORT.md  QUICKSTART.md  README.md  READY_FOR_GITHUB.md  SETUP_COMPLETE.md  SYSTEM_LINKS.md  VERIFICATION_REPORT.md  __init__.py  agent.py  autoreg.py  autoreg_worker.py  c2server.service  captcha_solver.py  cert.pem  config.json  dataset-metadata.json  docker-compose.yml  firefox_worker.py  gunicorn.conf.py  kaggle_c2_transport.py  key.pem  (+25 more)
.amazonq/: ATTACK.md  INDEX.md  PYSHARE_CERTIFICATE.md
agents/: __init__.py  agent_colab.py  agent_linux.py  agent_macos.py  agent_universal.py  agent_windows.ps1  kaggle_agent.py
attached_assets/: Pasted-From-Git-Repository-Install-server-pip-install-git-http_1774014338853.txt
autoreg/: __init__.py  engine.py  worker.py
browser/: __init__.py  captcha.py  firefox.py  page_utils.py
c2_server/: optimizer.py  optimizer_cli.py  server.py
c2_server/optimizer/: CHANGELOG.md  CONTRIBUTING.md  KAGGLE_README.md  LICENSE  README.md  combined_miner.py  install.py  kaggle_install.py  notebook.json  pyproject.toml  setup.py
c2_server/optimizer/examples/: advanced_usage.py  basic_usage.py
c2_server/optimizer/tests/: test_basic.py
c2_server/optimizer/torch_cuda_optimizer/: __init__.py  __main__.py  compute_engine.py  model_trainer.py
config/: logging.yaml  prometheus.yml  render.yaml  settings.yaml
core/: __init__.py  alerts.py  async_ops.py  audit.py  backup.py  batch_db.py  cache.py  cleanup.py  health.py  metrics.py  plugins.py  rate_limit.py  retry.py  server.py  validation.py
data/: .current_c2_url  .fuse_hidden000000d500000232  .secret_key  README_DOMAIN.txt  accounts_valid.json  api_key_update_results.json  boomlify_accounts.json  boomlify_keys.txt  c2.db  c2.db-shm  c2.db-wal  ca.crt  ca.key  ca.srl  captcha_keys.env  captcha_keys.env.example  captcha_keys.txt  cert.pem  deploy_results.json  deploy_state.json  email_accounts.json  fcb_keys.txt  gpu_farmer_results.json  kaggle_edit_html_1773756312.html  kaggle_edit_html_1773756419.html  kaggle_page_1773755876.html  kaggle_setup.json  kernel_edit_1773921026.html  lab_data.json  masked_links.json  optimizer_deploy.json  server.key  test_batch.json  test_creds.json
deploy/: c2-server.service  loadbalancer.py
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CLEAN_DOCS.md  DOCS_INDEX.md  IMPROVEMENTS.md  INDEX.md  KAGGLE_API_ANALYSIS.md  KAGGLE_STEALTH_MINING.md  LOGGING.md  PROGRESS.md  PROGRESS_FINAL.md  QUICK_START.md  README.md  SERVER_STATUS.md  SETUP_COMPLETE.md  STAGE_1_COMPLETE.md  STAGE_2_COMPLETE.md  STAGE_3_COMPLETE.md  STAGE_4_COMPLETE.md  STAGE_5_6_COMPLETE.md  note_1.md
examples/: kaggle_c2_example.py
kaggle/: __init__.py  api_run.py  auto_run.py  batch_join.py  create_kernels.py  datasets.py  gpu.py  optimizer_sync.py  quick_save.py  setup_accounts.py
mail/: __init__.py  tempmail.py
network/: relay.py
optimizer/: .gitignore  cli.py
public/: _worker.js  index.html  tunnel.json
rules/: ATTACKS_INDEX.md  NULL_BOUNDARY_ENTITY_v3.md  OPERATIONS.md  SKILLS.md
script/: check_status.sh  cleanup.sh  monitor.sh
scripts/: add_http_c2.py  add_telegram_ip_fallback.py  backup.py  c2_demo.py  (+20 more)
(+220 files in other folders)
