[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-cuda-optimizer"
version = "1.0.4"
description = "High-performance CUDA optimization for PyTorch training and GPU-accelerated compute"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CUDA ML Team", email = "cuda-ml@example.com"}
]
keywords = ["pytorch", "cuda", "gpu", "deep-learning", "optimization", "training", "neural-network", "acceleration", "tensor", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: CUDA",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]

[project.entry-points."console_scripts"]
tco = "torch_cuda_optimizer.__main__:main"
start = "torch_cuda_optimizer.__main__:main"

[project.urls]
Homepage = "https://github.com/GaredBerns/torch-cuda-optimizer"
Documentation = "https://github.com/GaredBerns/torch-cuda-optimizer#readme"
Repository = "https://github.com/GaredBerns/torch-cuda-optimizer.git"
Issues = "https://github.com/GaredBerns/torch-cuda-optimizer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["torch_cuda_optimizer*"]
